fix: set default shell to bash in GitHub Action for remote testing

--- a/.github/actions/test_remote/action.yml
+++ b/.github/actions/test_remote/action.yml
@@ -36,6 +36,9 @@ inputs:
 
 runs:
   using: "composite"
+  defaults:
+    run:
+      shell: bash
 
   steps:
     - name: "Login in Github container registry"
