--- a/.github/actions/test-remote/action.yml
+++ b/.github/actions/test-remote/action.yml
@@ -9,6 +9,12 @@ inputs:
 
   # Required inputs
 
+  mapdl-version:
+    description: |
+      MAPDL version to test.
+    required: true
+    type: string
+
   username:
     description: |
       Username for the GitHub container registry.
@@ -20,10 +26,10 @@ inputs:
       Password for the GitHub container registry.
     required: true
     type: string
-  
-  mapdl-version:
+
+  license_server:
     description: |
-      MAPDL version to test.
+      License server for ANSYS MAPDL
     required: true
     type: string
   
@@ -86,7 +92,7 @@ runs:
     - name: "Pull, launch, and validate MAPDL service"
       id: start_mapdl
       env:
-        LICENSE_SERVER: ${{ inputs.LICENSE_SERVER }}
+        LICENSE_SERVER: ${{ inputs.license_server }}
         MAPDL_VERSION: ${{ inputs.mapdl-version }}
         DISTRIBUTED_MODE: ${{ steps.distributed_mode.outputs.distributed_mode }}
       shell: bash
